# unrealzap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  audio_helper.py  bug-zapper.code-workspace  bug_zapper.py  bug_zapper.service  code-style.md  config.json  config.py  db_helper.py  kill_tracker.py  mypy.ini  pyproject.toml  ruff.toml  time_tracker.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  python-publish.yml
scripts/: logs_bug_zapper.sh  restart_bug_zapper.sh  start_sqlite_web.sh  stop_bug_zapper.sh  update_config.sh
src/bug_zapper/: audio_helper.py  bug_zapper.py  kill_tracker.py  time_tracker.py
